# Computer-Science-Notes

./: .gitignore  pyproject.toml  sandbox.ipynb
.obsidian/: workspace.json
Courses/Discrete Mathematics/: General Information.md  Index.md
Courses/Discrete Mathematics/Discussion/Week 3 and 4/: Week 3 Response.tex  (+1 more)
Courses/Discrete Mathematics/Quiz/: NH WK78 PRACTICE Quiz.tex
Courses/Discrete Mathematics/Temporary/: Template.tex
Courses/Discrete Mathematics/Week 1/: Notes.md  Week 1 Notes.md
Courses/Discrete Mathematics/Week 2/: Week 2 Notes.md
Courses/Discrete Mathematics/Week 3/: Week 3 Notes.md
Courses/Discrete Mathematics/Week 4/: Week 4 Notes.md
Courses/Discrete Mathematics/Week 6/: NH Assignment 6.tex
Courses/Discrete Mathematics/Week 7/: NH Assignment 7 Part 1.tex  NH Assignment 7 Part 2.tex
Courses/Discrete Mathematics/Week 8/: NH Assignment 8 Part 1.tex  NH Assignment 8 Part 2.tex
Courses/Discrete Mathematics/Week 9/: NH Assignment 9 Part 1.tex  NH Assignment 9 Part 2.tex
Courses/Discrete Mathematics/Week10/: NH Assignment 10 Part 1.tex
Courses/Intro to CS /: End Of Course Reflection.tex
Courses/Intro to CS /7c/: NH Assignment 7c.tex
Courses/Intro to CS /Project 3a/: NH Project Plan for Assignment 3a.tex
Courses/Intro to CS I/: NH Project Plan for Assignment 3a.tex
Courses/Intro to CS I/Project 3a/: NH Reflection for Project 3a.tex
Discrete Mathematics/: Index - Notes.md
Discrete Mathematics/Week 1/: Week 1 Notes.md
Discrete Mathematics/Week 1/Homework/: Week 1 Homework Instructions.md
Sandbox/Mother HW/: Two Problems.tex
(+23 files in other folders)
