[tool.poetry]
name = "computer-science-notes"
version = "0.1.0"
description = ""
authors = ["Noah Hinojos <noah.hinojos@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.2"
pip = "^24.2"
ipykernel = "^6.29.5"
ipython = "^8.28.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
